--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -2,9 +2,9 @@
   font-family: "iconfont"; /* Project id 3870371 */
   /* Color fonts */
   src: 
-       url('iconfont.woff2?t=1675147943265') format('woff2'),
-       url('iconfont.woff?t=1675147943265') format('woff'),
-       url('iconfont.ttf?t=1675147943265') format('truetype');
+       url('iconfont.woff2?t=1675276229177') format('woff2'),
+       url('iconfont.woff?t=1675276229177') format('woff'),
+       url('iconfont.ttf?t=1675276229177') format('truetype');
 }
 
 .iconfont {
@@ -13,6 +13,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-guanbixiao:before {
+  content: "\e8bb";
 }
 
 .icon-fanhui1:before {
